<resources>
    <string name="app_name">SiKawan</string>
    <string name="lewati">LEWATI</string>
    <string name="tvMasuk">Masuk</string>
    <string name="tvSilahkan">Silakan masukkan nomor NISN dan password yang diberikan sekolah.</string>
    <string name="tvNISN">Nomor NISN</string>
    <string name="tvHintTuliskan">Tuliskan nomor NISN putra/i anda</string>
    <string name="tvPassword">Password</string>
    <string name="tvHintPassword">Password didapatkan saat daftar ulang</string>
    <string name="tvSepertinya">Sepertinya NISN dan password yang Bapak/Ibu masukkan salah.</string>
    <string name="btnCoba">Coba Lagi</string>
    <string name="tvProfil">Profil</string>
    <string name="tvDaftarLaporan">Daftar Laporan</string>
    <string name="tvHome">Home</string>
    <string name="tvName">Rini Setiawati</string>
    <string name="tvSekolah">SMA N 3 Yogyakarta</string>
    <string name="tvKehadiran">Kehadiran hari ini:</string>
    <string name="tvStatusKehadiran">Penuh</string>
    <string name="tvEksplor">Eksplor</string>
    <string name="tvNilai">Nilai</string>
    <string name="tvPresensi">Presensi</string>
    <string name="tvLapor">Lapor</string>
    <string name="_5">5</string>
    <string name="tvPenuh">Penuh</string>
    <string name="tvTidakPenuh">Tidak Penuh</string>
    <string name="tvAlpha">Alpha</string>
    <string name="tvSakit">Sakit/Ijin</string>
    <string name="tvNilaiPekanIni">Nilai Pekan Ini</string>
    <string name="jenisNilai">Quiz</string>
    <string name="tanggalNilai">02/12/2018</string>
    <string name="tvMatpel">Bahasa Indonesia</string>
    <string name="tvNilaiMatpel">86</string>
    <string name="noNISN">50232</string>
    <string name="tvUbahPassword">Ubah Password</string>
    <string name="tvKeluarAkun">Keluar Akun</string>
    <string name="dicky_prasetyo">Dicky Prasetyo</string>
    <string name="tvTambahAkun">Tambah Akun</string>
    <string name="tvMasukkanPasswordSaatIni">Masukkan password saat ini</string>
    <string name="tvMasukkanPasswordBaru">Masukkan password baru</string>
    <string name="tvMasukkanPasswordBaruLagi">Masukkan password baru lagi</string>
    <string name="btnSimpan">SIMPAN</string>
    <string name="tvMelapor">Melapor kejadian</string>
    <string name="tvBelumPernah">Bapak/Ibu belum pernah melaporkan kejadian. Untuk melapor, silakan menekan tombol di
        bawah ini.
    </string>
    <string name="tvLaporkanKeluhan">Laporkan Keluhan</string>
    <string name="tvLokasiFoto">Lokasi pengambilan foto</string>
    <string name="tvBuatLaporSebelumUpload">Bapak/Ibu dapat melaporkan permasalahan sekolah atau putra/i anda. Masukan
        di bawah tidak wajib. Silakan diisi sesuai kebutuhan.
    </string>
    <string name="tvLaporFeedback">Fasilitas sekolah kurang memadahi</string>
    <string name="tvStatusLaporan">Status Laporan</string>
    <string name="tvMenunggu">Menunggu</string>
    <string name="tvDeskripsiLaporan">DeskripsiLaporan</string>
    <string name="tvIsiDeskripsiLap">Kursi dan meja yang tersedia tidak sesuai jumlah murid.</string>
    <string name="tvServerError">Hai, sepertinya anda tidak terhubung dengan SiKawan. Coba cek koneksi anda</string>
    <string name="tvJudul">Judul Laporan</string>
    <string name="tvIsi">Mohon tenggang waktu pembaya ...</string>
    <string name="tvFasilitas">Fasilitas sekolah kurang memadai</string>
    <string name="tvStatus">Menunggu</string>
    <string name="tvDeskripsi">Deskripsi Laporan</string>
    <string name="tvISI">Kursi dan meja yang tersedia tidak sesuai jumlah murid.</string>
    <string name="tvBalasan">Balasan</string>
    <string name="tvIsiBalasan">Isi Balasan</string>
    <string name="tuliskan_keluhan_anda">Tuliskan keluhan anda</string>
    <string name="deskripsi_keluhan">Deskripsi keluhan</string>
    <string name="judul_keluhan">Judul keluhan</string>
    <string name="lihat_daftar">LIHAT DAFTAR</string>
    <string name="nilai">Nilai</string>

    <string name="tahunAjaran">Tahun Ajaran:</string>
    <string name="semester">Semester :</string>
    <string name="_2018_2019">2018 / 2019</string>
    <string name="ganjil">Ganjil</string>

    <string name="tugas">Tugas</string>
    <string name="uas">UAS</string>
    <string name="quiz">Quiz</string>
    <string name="mid">MID</string>

    <string name="sen">Sen</string>
    <string name="sel">Sel</string>
    <string name="rab">Rab</string>
    <string name="kam">Kam</string>
    <string name="jum">Jum</string>
    <string name="sab">Sab</string>
    <string name="min">Min</string>
    <string name="hadir">Hadir</string>
    <string name="tdkPenuh">Tidak Penuh</string>
    <string name="sakit">Sakit / Ijin</string>
    <string name="alpa">Tanpa Keterangan</string>
    <string name="satu">1</string>
    <string name="enam">6</string>
    <string name="tuju">7</string>
    <string name="delap">8</string>
    <string name="dua">2</string>
    <string name="sem">9</string>
    <string name="sepuluh">10</string>
    <string name="sebel">11</string>
    <string name="tiga">3</string>
    <string name="duabel">12</string>
    <string name="tigabel">13</string>
    <string name="empatbel">14</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="limabel">15</string>
    <string name="enambel">16</string>
    <string name="tujubel">17</string>
    <string name="delabel">18</string>
    <string name="sembel">19</string>
    <string name="duapul">20
    </string>
    <string name="duasatu">21</string>
    <string name="duadua">22</string>
    <string name="duatiga">23</string>
    <string name="duaemp">24</string>
    <string name="dualim">25</string>
    <string name="duaena">26</string>
    <string name="duatuj">27</string>
    <string name="duadel">28
    </string>
    <string name="duasem">29</string>
    <string name="tigapul">30</string>


</resources>
