<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".UbahPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ToolbarAtas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/normal"
                android:text="@string/tvPassword"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/sp20"
                app:layout_constraintBottom_toBottomOf="@+id/ic_back"
                app:layout_constraintStart_toEndOf="@+id/ic_back"
                app:layout_constraintTop_toTopOf="@+id/ic_back" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/edtPasswordLama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_edt"
        android:fontFamily="@font/normal"
        android:hint="@string/tvMasukkanPasswordSaatIni"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolbarAtas" />

    <EditText
        android:id="@+id/edtPasswordBaru1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edt"
        android:fontFamily="@font/normal"
        android:hint="@string/tvMasukkanPasswordBaru"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text12"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordLama"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordLama"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordLama" />

    <EditText
        android:id="@+id/edtPasswordBaru2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edt"
        android:fontFamily="@font/normal"
        android:hint="@string/tvMasukkanPasswordBaruLagi"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text12"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordBaru1"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordBaru1"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordBaru1" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/color_btn"
        android:fontFamily="@font/normal"
        android:text="@string/btnSimpan"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>