<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LaporLanjutanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ToolbarAtas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/normal"
                android:text="@string/tvLapor"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/sp20"
                app:layout_constraintBottom_toBottomOf="@+id/ic_back"
                app:layout_constraintStart_toEndOf="@+id/ic_back"
                app:layout_constraintTop_toTopOf="@+id/ic_back" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLaporkanKeluhanLanjut"
        app:layout_constraintTop_toBottomOf="@+id/ToolbarAtas">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="normal"
                android:text="@string/tvBuatLaporSebelumUpload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/bold"
                android:text="@string/tvLokasiFoto"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <EditText
                android:id="@+id/tvLokasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edt"
                android:fontFamily="@font/normal"
                android:hint="@string/tvLokasiFoto"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/normal"
                android:text="@string/judul_keluhan"
                app:layout_constraintStart_toStartOf="@+id/tvLokasi"
                app:layout_constraintTop_toBottomOf="@+id/tvLokasi" />

            <EditText
                android:id="@+id/tvJudulKeluhan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edt"
                android:fontFamily="@font/normal"
                android:hint="@string/judul_keluhan"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/bold"
                android:text="@string/deskripsi_keluhan"
                app:layout_constraintStart_toStartOf="@+id/tvJudulKeluhan"
                app:layout_constraintTop_toBottomOf="@+id/tvJudulKeluhan" />

            <EditText
                android:id="@+id/tvDekprisiKelihan"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edt"
                android:fontFamily="@font/normal"
                android:hint="@string/tuliskan_keluhan_anda"
                android:inputType="textLongMessage"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvJudulKeluhan"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnLaporkanKeluhanLanjut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_btn"
        android:fontFamily="@font/bold"
        android:text="LAPORKAN KELUHAN"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>